tests/errors/e2_packedstruct_T290.pyx
cdef packed foo:
    pass

_ERRORS = u"""
1:12: Expected 'struct', found 'foo'
"""
